added header & banner section

--- a/index.html
+++ b/index.html
@@ -8,11 +8,34 @@
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 
-<body>
+<body class="quicksand-font">
     <header>
-
+        <nav class="navbar display-flex">
+            <div class="website-name display-flex">
+                <img src="assets/logo.png" alt="website logo" class="web-logo">
+                <h3 class="web-name">SCHOOL</h3>
+            </div>
+            <ul class="nam-menu display-flex">
+                <li class="nav-list"><a href="" class="nav-text orange">Home</a></li>
+                <li class="nav-list"><a href="" class="nav-text skyblue">About</a></li>
+                <li class="nav-list"><a href="" class="nav-text turquoise-blue">Facilities</a></li>
+                <li class="nav-list"><a href="" class="nav-text blue-violet">Admission</a></li>
+            </ul>
+            <button class="contact-btn">Contact</button>
+        </nav>
     </header>
     <main>
+        <section class="banner display-flex">
+            <div class="banner-container">
+                <h3 class="banner-title"><span class="orange">Empowering</span><br>
+                    <span class="black">students from small age</span> <span class="skyblue">towards vision</span></h3>
+                <p class="banner-description black">With the courage, Confidence, Creativity and Compassion to make their Unique Contribution in a Diverse and Dynamic World.</p>
+                <button class="primary-btn">Enroll Now</button>
+            </div>
+            <div class="banner-img">
+                <img src="assets/hero-kids.png" alt="banner image hero kids">
+            </div>
+        </section>
 
     </main>
     <footer>
