--- a/index.html
+++ b/index.html
@@ -8,40 +8,143 @@
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 
-<body class="quicksand-font">
+<body class="quicksand-font bg-color">
     <header>
+        <!-- navbar section -->
         <nav class="navbar display-flex">
-            <div class="website-name display-flex">
+            <div class="website display-flex">
                 <img src="assets/logo.png" alt="website logo" class="web-logo">
                 <h3 class="web-name">SCHOOL</h3>
             </div>
-            <ul class="nam-menu display-flex">
-                <li class="nav-list"><a href="" class="nav-text orange">Home</a></li>
-                <li class="nav-list"><a href="" class="nav-text skyblue">About</a></li>
-                <li class="nav-list"><a href="" class="nav-text turquoise-blue">Facilities</a></li>
-                <li class="nav-list"><a href="" class="nav-text blue-violet">Admission</a></li>
+            <!-- menu -->
+            <ul class="nav-menu display-flex">
+                <li class="nav-list"><a href="" class="nav-link orange">Home</a></li>
+                <li class="nav-list"><a href="" class="nav-link skyblue">About</a></li>
+                <li class="nav-list"><a href="" class="nav-link turquoise">Facilities</a></li>
+                <li class="nav-list"><a href="" class="nav-link periwinkle-blue">Admission</a></li>
             </ul>
             <button class="contact-btn">Contact</button>
         </nav>
     </header>
     <main>
+        <!-- banner section -->
         <section class="banner display-flex">
-            <div class="banner-container">
-                <h3 class="banner-title"><span class="orange">Empowering</span><br>
-                    <span class="black">students from small age</span> <span class="skyblue">towards vision</span></h3>
-                <p class="banner-description black">With the courage, Confidence, Creativity and Compassion to make their Unique Contribution in a Diverse and Dynamic World.</p>
-                <button class="primary-btn">Enroll Now</button>
+            <div class="banner-content">
+                <h2 class="banner-title">
+                    <span class="orange">Empowering</span> <br> <span class="black">students from small age</span> <span
+                        class="skyblue">towards vision</span>
+                </h2>
+                <p class="banner-description">
+                    With the courage, Confidence, Creativity and Compassion to make their Unique Contribution in a
+                    Diverse and Dynamic World.
+                </p>
+                <button class="primary-btn">
+                    Enroll Now
+                </button>
             </div>
             <div class="banner-img">
-                <img src="assets/hero-kids.png" alt="banner image hero kids">
+                <img src="assets/hero-kids.png" alt="banner image of kid">
             </div>
         </section>
+        <!-- curriculum serciton -->
+        <section class="curriculum">
+            <h3 class="curriculum-title">Standard Curriculum</h3>
+            <div class="curriculum-card-container">
+                <div class="curriculum-card" id="card-1">
+                    <img src="assets/kinder.png" alt="">
+                    <h4 class="curriculum-card-title ">Kinder (3-6) Years</h4>
+                    <p class="curriculum-card-description">
+                        The early years are vital for children's growth. They begin exploring their surroundings,
+                        learning language, and forming essential social connections during this developmental phase.
+                    </p>
+                    <span><a href="" class="read-more turquoise">Read More</a></span>
+                </div>
+                <div class="curriculum-card" id="card-2">
+                    <img src="assets/elementary.png" alt="">
+                    <h4 class="curriculum-card-title ">Elementary School</h4>
+                    <p class="curriculum-card-description">
+                        Elementary school is where children start building foundational skills in subjects like math, reading, and science, while also developing social, emotional, and cognitive abilities for future learning.
+                    </p>
+                    <span><a href="" class="read-more orange">Read More</a></span>
+                </div>
+                <div class="curriculum-card" id="card-3">
+                    <img src="assets/middle.png" alt="">
+                    <h4 class="curriculum-card-title ">Middle (10-16) Years</h4>
+                    <p class="curriculum-card-description">
+                        The middle years are a transformative period as children grow more independent, strengthen critical thinking, and develop complex social relationships while transitioning into adolescence.
+                    </p>
+                    <span><a href="" class="read-more periwinkle-blue">Read More</a></span>
+                </div>
+            </div>
+        </section>
+        <!-- our stories -->
+        <section class="our-stories bg-color2">
+            <h3 class="stories-title">Our Stories</h3>
+            <div class="stories-container display-flex">
+                <div class="stories-big-card">
+                    <img src="assets/story-2.png" alt="" class="stories-big-img"><button class="stories-btn-date"
+                        id="date-btn-light-turquoise">November 19, 2019</button>
+                    <h4 class="stories-big-title">A fun toddler coloring training on classroom</h4>
+                    <p class="stories-big-description">Beautiful branding for changes by Never Now in Australia. changes is a platform for open discussion in an inclusive and collaborative environment, providing the...</p>
+                </div>
+                <div class="story-sidebar">
+                    <div class="small-story-card">
+                        <img src="assets/story-2.png" alt="" class="small-story-img"><button
+                            class="stories-btn-date">November 19, 2019</button>
+                        <h4 class="small-story-caption">Find out if a school fits the family’s needs</h4>
+                    </div>
+                    <div class="small-story-card">
+                        <img src="assets/story-3.png" alt="" class="small-story-img"><button class="stories-btn-date"
+                            id="date-btn-periwinkle-blue">November 19, 2019</button>
+                        <h4 class="small-story-caption">Summer math & literacy centres for kids</h4>
+                    </div>
+                    <div class="small-story-card">
+                        <img src="assets/story-4.png" alt="" class="small-story-img"><button
+                            class="stories-btn-date">September 10, 2019</button>
+                        <h4 class="small-story-caption">Classroom management techniques for new tutors</h4>
+                    </div>
+                    <div class="small-story-card">
+                        <img src="assets/story-5.png" alt="" class="small-story-img"><button
+                            class="stories-btn-date">July 19, 2019</button>
+                        <h4 class="small-story-caption">Conversation rhymes improve kids listening</h4>
+                    </div>
 
+                </div>
+            </div>
+            <div class="view-all-btn">
+                <button class="primary-btn">View All</button>
+            </div>
+        </section>
     </main>
     <footer>
-
+        <div class="footer-section">
+            <div class="footer-web-info">
+                <div class="footer-web-info-container display-flex">
+                    <img src="assets/logo.png" alt="">
+                    <h3 class="footer-web-name">Kids Education</h3>
+                </div>
+                <p class="footer-web-description">Children’s education is the foundation for lifelong learning and success. In these early years, children develop key skills such as reading, writing, problem-solving.</p>
+            </div>
+            <div class="footer-menu">
+                <h4 class="footer-menu-title">About School</h4>
+                <ul class="footer-menu-container">
+                    <li class="footer-menu-list"><a href="" class="footer-menu-link">Home</a></li>
+                    <li class="footer-menu-list"><a href="" class="footer-menu-link">About</a></li>
+                    <li class="footer-menu-list"><a href="" class="footer-menu-link">Facilities</a></li>
+                    <li class="footer-menu-list"><a href="" class="footer-menu-link">Admission</a></li>
+                </ul>
+            </div>
+            <div class="social-media">
+                <h4 class="social-media-title">Keep In Touch</h4>
+                <div class="social-media-container">
+                    <img src="assets/fb.png" alt="">
+                    <img src="assets/dribble.png" alt="">
+                    <img src="assets/twitter.png" alt="">
+                    <img src="assets/google+.png" alt="">
+                </div>
+            </div>
+        </div>
     </footer>
-
 </body>
 
 </html>
