--- a/index.html
+++ b/index.html
@@ -63,7 +63,9 @@
                     <img src="assets/elementary.png" alt="">
                     <h4 class="curriculum-card-title ">Elementary School</h4>
                     <p class="curriculum-card-description">
-                        Elementary school is where children start building foundational skills in subjects like math, reading, and science, while also developing social, emotional, and cognitive abilities for future learning.
+                        Elementary school is where children start building foundational skills in subjects like math,
+                        reading, and science, while also developing social, emotional, and cognitive abilities for
+                        future learning.
                     </p>
                     <span><a href="" class="read-more orange">Read More</a></span>
                 </div>
@@ -71,7 +73,9 @@
                     <img src="assets/middle.png" alt="">
                     <h4 class="curriculum-card-title ">Middle (10-16) Years</h4>
                     <p class="curriculum-card-description">
-                        The middle years are a transformative period as children grow more independent, strengthen critical thinking, and develop complex social relationships while transitioning into adolescence.
+                        The middle years are a transformative period as children grow more independent, strengthen
+                        critical thinking, and develop complex social relationships while transitioning into
+                        adolescence.
                     </p>
                     <span><a href="" class="read-more periwinkle-blue">Read More</a></span>
                 </div>
@@ -79,51 +83,58 @@
         </section>
         <!-- our stories -->
         <section class="our-stories bg-color2">
-            <h3 class="stories-title">Our Stories</h3>
-            <div class="stories-container display-flex">
-                <div class="stories-big-card">
-                    <img src="assets/story-2.png" alt="" class="stories-big-img"><button class="stories-btn-date"
-                        id="date-btn-light-turquoise">November 19, 2019</button>
-                    <h4 class="stories-big-title">A fun toddler coloring training on classroom</h4>
-                    <p class="stories-big-description">Beautiful branding for changes by Never Now in Australia. changes is a platform for open discussion in an inclusive and collaborative environment, providing the...</p>
+            <div class="our-sories-section">
+                <h3 class="stories-title">Our Stories</h3>
+                <div class="stories-container display-flex">
+                    <div class="stories-big-card">
+                        <img src="assets/story-1.png" alt="" class="stories-big-img"><button class="stories-btn-date"
+                            id="date-btn-light-turquoise">November 19, 2019</button>
+                        <div class="story-big-card-content">
+                            <h5 class="stories-big-title">A fun toddler coloring training on classroom</h5>
+                            <p class="stories-big-description">Beautiful branding for changes by Never Now in Australia.
+                                changes is a platform for open discussion in an inclusive and collaborative environment,
+                                providing the...</p>
+                        </div>
+                    </div>
+                    <div class="story-sidebar">
+                        <div class="small-story-card">
+                            <img src="assets/story-2.png" alt="" class="small-story-img"><button
+                                class="stories-btn-date">November 19, 2019</button>
+                            <h5 class="small-story-caption">Find out if a school fits the family’s needs</h5>
+                        </div>
+                        <div class="small-story-card">
+                            <img src="assets/story-3.png" alt="" class="small-story-img"><button
+                                class="stories-btn-date" id="date-btn-periwinkle-blue">November 19, 2019</button>
+                            <h5 class="small-story-caption">Summer math & literacy centres for kids</h5>
+                        </div>
+                        <div class="small-story-card">
+                            <img src="assets/story-4.png" alt="" class="small-story-img"><button
+                                class="stories-btn-date">September 10, 2019</button>
+                            <h5 class="small-story-caption">Classroom management techniques for new tutors</h5>
+                        </div>
+                        <div class="small-story-card">
+                            <img src="assets/story-5.png" alt="" class="small-story-img"><button
+                                class="stories-btn-date">July 19, 2019</button>
+                            <h5 class="small-story-caption">Conversation rhymes improve kids listening</h5>
+                        </div>
+                    </div>
                 </div>
-                <div class="story-sidebar">
-                    <div class="small-story-card">
-                        <img src="assets/story-2.png" alt="" class="small-story-img"><button
-                            class="stories-btn-date">November 19, 2019</button>
-                        <h4 class="small-story-caption">Find out if a school fits the family’s needs</h4>
-                    </div>
-                    <div class="small-story-card">
-                        <img src="assets/story-3.png" alt="" class="small-story-img"><button class="stories-btn-date"
-                            id="date-btn-periwinkle-blue">November 19, 2019</button>
-                        <h4 class="small-story-caption">Summer math & literacy centres for kids</h4>
-                    </div>
-                    <div class="small-story-card">
-                        <img src="assets/story-4.png" alt="" class="small-story-img"><button
-                            class="stories-btn-date">September 10, 2019</button>
-                        <h4 class="small-story-caption">Classroom management techniques for new tutors</h4>
-                    </div>
-                    <div class="small-story-card">
-                        <img src="assets/story-5.png" alt="" class="small-story-img"><button
-                            class="stories-btn-date">July 19, 2019</button>
-                        <h4 class="small-story-caption">Conversation rhymes improve kids listening</h4>
-                    </div>
-
+                <div class="view-all-btn">
+                    <button class="primary-btn">View All</button>
                 </div>
-            </div>
-            <div class="view-all-btn">
-                <button class="primary-btn">View All</button>
             </div>
         </section>
     </main>
     <footer>
-        <div class="footer-section">
+        <div class="footer-section display-flex">
             <div class="footer-web-info">
                 <div class="footer-web-info-container display-flex">
                     <img src="assets/logo.png" alt="">
-                    <h3 class="footer-web-name">Kids Education</h3>
+                    <h3 class="footer-web-name">Kids <br> Education</h3>
                 </div>
-                <p class="footer-web-description">Children’s education is the foundation for lifelong learning and success. In these early years, children develop key skills such as reading, writing, problem-solving.</p>
+                <p class="footer-web-description">Children’s education is the foundation for lifelong learning and
+                    success. In these early years, children develop key skills such as reading, writing,
+                    problem-solving.</p>
             </div>
             <div class="footer-menu">
                 <h4 class="footer-menu-title">About School</h4>
@@ -136,7 +147,7 @@
             </div>
             <div class="social-media">
                 <h4 class="social-media-title">Keep In Touch</h4>
-                <div class="social-media-container">
+                <div class="social-media-container display-flex">
                     <img src="assets/fb.png" alt="">
                     <img src="assets/dribble.png" alt="">
                     <img src="assets/twitter.png" alt="">
