added arrow keys on curriculam section

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kids School</title>
     <link rel="stylesheet" href="styles/styles.css">
+    <script src="https://kit.fontawesome.com/0f41e9eaad.js" crossorigin="anonymous"></script>
 </head>
 
 <body class="quicksand-font bg-color">
@@ -18,15 +19,20 @@
             </div>
             <!-- menu -->
             <ul class="nav-menu display-flex">
-                <li class="nav-list"><a href="" class="nav-link orange">Home</a></li>
-                <li class="nav-list"><a href="" class="nav-link skyblue">About</a></li>
-                <li class="nav-list"><a href="" class="nav-link turquoise">Facilities</a></li>
-                <li class="nav-list"><a href="" class="nav-link periwinkle-blue">Admission</a></li>
+                <li class="nav-list"><a href="#" class="nav-link orange">Home</a></li>
+                <li class="nav-list"><a href="#" class="nav-link skyblue">About</a></li>
+                <li class="nav-list"><a href="#" class="nav-link turquoise">Facilities</a></li>
+                <li class="nav-list"><a href="#" class="nav-link periwinkle-blue">Admission</a></li>
             </ul>
             <button class="contact-btn">Contact</button>
         </nav>
     </header>
     <main>
+        <div class="scrolling">
+            <marquee behavior="scroll" direction="left">
+                Children’s education is the foundation for lifelong learning and success. In these early years, children develop key skills such as reading, writing, problem-solving.
+            </marquee>
+        </div>
         <!-- banner section -->
         <section class="banner display-flex">
             <div class="banner-content">
@@ -57,7 +63,7 @@
                         The early years are vital for children's growth. They begin exploring their surroundings,
                         learning language, and forming essential social connections during this developmental phase.
                     </p>
-                    <span><a href="" class="read-more turquoise">Read More</a></span>
+                    <span><a href="#" class="read-more turquoise">Read More</a></span>
                 </div>
                 <div class="curriculum-card" id="card-2">
                     <img src="assets/elementary.png" alt="">
@@ -67,7 +73,7 @@
                         reading, and science, while also developing social, emotional, and cognitive abilities for
                         future learning.
                     </p>
-                    <span><a href="" class="read-more orange">Read More</a></span>
+                    <span><a href="#" class="read-more orange">Read More</a></span>
                 </div>
                 <div class="curriculum-card" id="card-3">
                     <img src="assets/middle.png" alt="">
@@ -77,9 +83,13 @@
                         critical thinking, and develop complex social relationships while transitioning into
                         adolescence.
                     </p>
-                    <span><a href="" class="read-more periwinkle-blue">Read More</a></span>
+                    <span><a href="#" class="read-more periwinkle-blue">Read More</a></span>
                 </div>
             </div>
+            <div class="arrows">
+                <i class="fa-solid fa-chevron-left"></i>
+                <i class="fa-solid fa-chevron-right"></i>
+            </div>      
         </section>
         <!-- our stories -->
         <section class="our-stories bg-color2">
