applied marquee tag

--- a/index.html
+++ b/index.html
@@ -28,9 +28,12 @@
         </nav>
     </header>
     <main>
-        <div class="scrolling">
+        <!-- marquee section -->
+        <div class="scrolling display-flex">
+            <span>Latest News</span>
             <marquee behavior="scroll" direction="left">
-                Children’s education is the foundation for lifelong learning and success. In these early years, children develop key skills such as reading, writing, problem-solving.
+                Children’s education is the foundation for lifelong learning and success. In these early years, children
+                develop key skills such as reading, writing, problem-solving.
             </marquee>
         </div>
         <!-- banner section -->
@@ -89,7 +92,7 @@
             <div class="arrows">
                 <i class="fa-solid fa-chevron-left"></i>
                 <i class="fa-solid fa-chevron-right"></i>
-            </div>      
+            </div>
         </section>
         <!-- our stories -->
         <section class="our-stories bg-color2">
