responsived for small device

--- a/index.html
+++ b/index.html
@@ -24,13 +24,16 @@
                 <li class="nav-list"><a href="#" class="nav-link turquoise">Facilities</a></li>
                 <li class="nav-list"><a href="#" class="nav-link periwinkle-blue">Admission</a></li>
             </ul>
+            <div class="menu-icon">
+                <i class="fa-solid fa-bars"></i>
+            </div>
             <button class="contact-btn">Contact</button>
         </nav>
     </header>
     <main>
         <!-- marquee section -->
         <div class="scrolling display-flex">
-            <span>Latest News</span>
+            <span>Notice</span>
             <marquee behavior="scroll" direction="left">
                 Children’s education is the foundation for lifelong learning and success. In these early years, children
                 develop key skills such as reading, writing, problem-solving.
@@ -152,10 +155,10 @@
             <div class="footer-menu">
                 <h4 class="footer-menu-title">About School</h4>
                 <ul class="footer-menu-container">
-                    <li class="footer-menu-list"><a href="" class="footer-menu-link">Home</a></li>
-                    <li class="footer-menu-list"><a href="" class="footer-menu-link">About</a></li>
-                    <li class="footer-menu-list"><a href="" class="footer-menu-link">Facilities</a></li>
-                    <li class="footer-menu-list"><a href="" class="footer-menu-link">Admission</a></li>
+                    <li class="footer-menu-list"><a href="#" class="footer-menu-link">Home</a></li>
+                    <li class="footer-menu-list"><a href="#" class="footer-menu-link">About</a></li>
+                    <li class="footer-menu-list"><a href="#" class="footer-menu-link">Facilities</a></li>
+                    <li class="footer-menu-list"><a href="#" class="footer-menu-link">Admission</a></li>
                 </ul>
             </div>
             <div class="social-media">
